Finished second project

--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ body {
     font-size: 16px;
     box-sizing: border-box;
     margin: 0;
+    padding: 0 1rem;
+}
+
+.flex{
+    display: flex;
+    gap: 1rem;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -27,13 +34,8 @@ body {
     padding: 0;
 }
 
-.card a {
-    margin: 0;
-    padding: 0;
-    margin-top: 5px;
-    display: block;
-    color: rgb(255, 255, 255);
-    font-weight: 700;
+p{
+    color: #fff;
     text-align: center;
-
+    padding-bottom: 5px;
 }
