--- a/style.css
+++ b/style.css
@@ -1,41 +1,72 @@
-body {
-    font-family: sans-serif;
-    font-size: 16px;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0 1rem;
+:root {
+
+    --main-color: #2A2E2F;
+    --accent-color: #DCDDD7;
+
 }
 
-.flex{
-    display: flex;
-    gap: 1rem;
-    margin: 0 auto;
+h1 {
+    font-family: 'Yeseva One', cursive;
+    color: var(--main-color);
+    text-align: center;
+}
+
+body {
+    display: grid;
+    font-family: 'Josefin Sans', sans-serif;
+    color: var(--accent-color);
+    font-size: 16px;
+    box-sizing: border-box;
     padding: 0;
+    margin: 0 auto;
+    background-color: var(--accent-color);
+    width: 80%;
+    justify-content: center;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+    padding: 0;
+    justify-items: center;
+    margin: 0;
 }
 
 .card {
     margin: 0;
     padding: 0;
-    background-color: rgb(46, 46, 46);
-    height: 235px;
-    width: 200px;
+    background-color: var(--main-color);
+    width: 247px;
+    height: 241px;
     align-items: center;
-    border: 2px solid black;
     border-radius: 10%;
     overflow: hidden;
+    border: 1px solid var(--main-color);
 
 }
 
+a {
+    text-decoration: none;
+}
+
 .card img {
-    height: 200px;
-    width: 200px;
+    width: 250px;
+    height: 167px;
     object-fit: cover;
     margin: 0;
     padding: 0;
 }
 
-p{
-    color: #fff;
+p {
+    color: var(--accent-color);
     text-align: center;
-    padding-bottom: 5px;
+    margin-top: 1.5rem;
+}
+
+@media (max-width:50em) {
+
+    .grid {
+        grid-template-columns: 1fr;
+    }
 }
